[package]
name = "inochi-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inochi2d = { package = "inochi2d-rs", path = "../inochi2d-rs" }
winit = "0.27.5"
bevy = { version = "0.9.1", features = [ "wayland"] }
glutin = "0.30.2"
glow = "0.11.2"
raw-window-handle = "0.5.0"
wgpu = "0.14.2"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"